# AED-1

./: .gitignore  Airline Information Management.pptx  Airline_Information_Management.pptx  CMakeLists.txt  main.cpp  ppt_aed.pptx
AED2122_G77/: CMakeLists.txt
AED2122_G77/Tests/: Airport.cpp  Date.cpp  Duration.cpp  Duration.h  Flight.cpp  FlightMap.cpp  FlightMap.h  Location.cpp  Luggage.cpp  Passenger.h  Schedule.cpp  Schedule.h
AED2122_G77/code/: Carriage.h  ConstTimeGen.cpp  FunLuggageProblem.cpp  Interface.cpp  Interface.h  Person.cpp  Service.h  TransitStop.h  Worker.h
AED2122_G77/documentation/html/: _airport_8h_source.html  _authentication_8h_source.html  _bst_8h_source.html  _car_8h_source.html  _const_time_gen_8h_source.html  _date_8h_source.html  _duration_8h_source.html  _flight_8h_source.html  _interface_8h_source.html  _location_8h_source.html  _luggage_8h_source.html  annotated.html  (+368 more)
Tests/: Airport.cpp  Airport.h  Authentication.cpp  Authentication.h  Bst.h  Car.cpp  Car.h  Carriage.cpp  Carriage.h  ConstTimeGen.cpp  ConstTimeGen.h  Date.cpp  Date.h  Duration.cpp  Duration.h  Flight.cpp  Flight.h  FlightMap.cpp  FlightMap.h  FunLuggageProblem.cpp  FunLuggageProblem.h  Interface.cpp  Interface.h  Location.cpp  Location.h  Luggage.cpp  Luggage.h  Map.cpp  Map.h  Passenger.cpp  Passenger.h  Person.cpp  Person.h  Plane.cpp  Plane.h  Schedule.cpp  Schedule.h  Service.cpp  Service.h  TimeGeneralization.cpp  (+4 more)
files/Authentication/: AdminList.csv
files/input/: airportsMadrid.csv  airportsOPorto.csv  flights.csv  planes.csv  transitStopsMadrid.csv  transitStopsOPorto.csv
files/output/: demoMap.html  simulationMap.html  test_airports.csv  test_luggage.csv  test_transitstops.csv
project/: CMakeLists.txt  Date.cpp  Date.h  Duration.cpp  Duration.h  Flight.cpp  Flight.h  Passenger.cpp  Passenger.h  Person.cpp  Person.h  Plain.cpp  Plain.h  Plane.cpp  Plane.h  Service.h  TimeGeneralization.cpp  TimeGeneralization.h  Worker.h  main.cpp
project/docs/: Doxyfile
(+890 files in other folders)
